--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,12 @@
 		// Some stricter flags (disabled by default)
 		"noUnusedLocals": false,
 		"noUnusedParameters": false,
-		"noPropertyAccessFromIndexSignature": false
+		"noPropertyAccessFromIndexSignature": false,
+		"paths": {
+			"@db": ["./server/db/db"],
+			"@types": ["./server/types/index"],
+			"@utils/*": ["./server/utils/*"],
+			"@api/*": ["./server/api/*"]
+		}
 	}
 }
