--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
 	},
 	"dependencies": {
 		"@types/react-dom": "^19.2.3",
-		"react-dom": "^19.2.4"
+		"bun-plugin-tailwind": "^0.1.2",
+		"react-dom": "^19.2.4",
+		"tailwindcss": "^4.1.18"
 	}
 }
