feat: implement blog post creation and listing functionality
- Add API service with methods to create, list, and fetch posts
- Create PostForm component for submitting new blog posts
- Create PostList component to display all posts with loading and error states
- Update App component to include form and post list sections with styling
- Move Tailwind plugin configuration from bun.toml to bunfig.toml
- Add posts.db to .gitignore and remove unused CSS classes
- Format configuration files with consistent indentation

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,15 +1,13 @@
 {
-  "files.associations": {
-    "*.css": "tailwindcss"
-  },
-  "tailwindCSS.includeLanguages": {
-    "css": "css"
-  },
-  "tailwindCSS.experimental.classRegex": [
-    "[^<]*"
-  ],
-  "tailwindCSS.validate": true,
-  "tailwindCSS.emmetCompletions": true,
-  "tailwindCSS.showPixelEquivalents": true,
-  "tailwindCSS.colorDecorators": true
+	"files.associations": {
+		"*.css": "tailwindcss"
+	},
+	"tailwindCSS.includeLanguages": {
+		"css": "css"
+	},
+	"tailwindCSS.experimental.classRegex": ["[^<]*"],
+	"tailwindCSS.validate": true,
+	"tailwindCSS.emmetCompletions": true,
+	"tailwindCSS.showPixelEquivalents": true,
+	"tailwindCSS.colorDecorators": true
 }
