refactor: restructure posts module with repository and service patterns
- Move posts-related files into a dedicated module directory
- Extract database initialization from db.ts to PostsRepository
- Introduce BaseRepository and BaseService for common CRUD operations
- Replace direct model usage with service layer in controller
- Update type exports and tsconfig paths accordingly

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,6 +29,7 @@
 			"@db": ["./server/db/db"],
 			"@types": ["./server/types/index"],
 			"@utils/*": ["./server/utils/*"],
+			"@common/*": ["./server/common/*"],
 			"@api/*": ["./server/api/*"]
 		}
 	}
