chore: add @modules path alias and update imports
- Add @modules/* path mapping to tsconfig.json to simplify imports
- Update all relative imports to use the new @modules alias
- Update documentation examples to reflect the new import style

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,6 +30,7 @@
 			"@types": ["./server/types/index"],
 			"@utils/*": ["./server/utils/*"],
 			"@common/*": ["./server/common/*"],
+			"@modules/*": ["./server/modules/*"],
 			"@api/*": ["./server/api/*"]
 		}
 	}
