refactor(server): introduce base module and centralized server initialization
- Add BaseModule abstract class to standardize module structure
- Move server initialization logic to separate serve utility module
- Update ChatModule and PostsModule to extend BaseModule
- Add WebsocketData type and update BaseWebsocket to use generic type
- Add @public/* path mapping to tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,6 +29,7 @@
 			"@db": ["./server/db/db"],
 			"@types": ["./server/types/index"],
 			"@utils/*": ["./server/utils/*"],
+			"@public/*": ["./public/*"],
 			"@common/*": ["./server/common/*"],
 			"@modules/*": ["./server/modules/*"],
 			"@api/*": ["./server/api/*"]
