style: standardize indentation and improve import paths
- Convert spaces to tabs for consistent indentation across React components
- Add @client/* path alias to tsconfig for cleaner imports
- Fix trailing whitespace in routes configuration
- Update import in serve.ts to use new path alias

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,6 +28,7 @@
 		"paths": {
 			"@db": ["./server/db/db"],
 			"@types": ["./server/types/index"],
+			"@client/*": ["./client/*"],
 			"@utils/*": ["./server/utils/*"],
 			"@public/*": ["./public/*"],
 			"@common/*": ["./server/common/*"],
