--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 	"dependencies": {
 		"@types/react-dom": "^19.2.3",
 		"bun-plugin-tailwind": "^0.1.2",
+		"jose": "^6.1.3",
 		"react-dom": "^19.2.4",
 		"tailwindcss": "^4.1.18",
 		"wouter": "^3.9.0"
